@@ -1,5 +1,10 @@
 New in ?.?.?:
 
+  - Prevent crashes if a file could not be opened (not found, or no
+    premission, or any other reason).  Instead, we continue to the next
+    file in the upload queue. This was the case in version 1.0.0, but
+    we had a regression in version 2.0.0.
+
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 New in 2.0.0:
